CMAKE_MINIMUM_REQUIRED ( VERSION 3.18)

PROJECT(Write_Project_Name_Here
        VERSION 1.0
        DESCRIPTION "Description" 
        LANGUAGES CXX CUDA       
)

ENABLE_LANGUAGE ( CUDA )

set(CMAKE_BUILD_TYPE DEBUG)

SET ( CMAKE_CXX_STANDARD 17 )
SET ( CMAKE_CUDA_STANDARD 17 )


SET ( SOURCES 
    ${CMAKE_SOURCE_DIR}/src
)

ADD_EXECUTABLE ( ${CMAKE_PROJECT_NAME} # remember to include the .cpp and .cu files here 
${SOURCES}/hello.cu 
${SOURCES}/h1.cu 

)

TARGET_INCLUDE_DIRECTORIES( ${CMAKE_PROJECT_NAME} 
    PRIVATE ${CMAKE_SOURCE_DIR}/include
)

#TARGET_LINK_LIBRARIES( ${CMAKE_PROJECT_NAME}
#    PRIVATE 

TARGET_COMPILE_OPTIONS( ${CMAKE_PROJECT_NAME}

    PRIVATE $<$<COMPILE_LANGUAGE:CXX>: >
    PRIVATE $<$<COMPILE_LANGUAGE:CUDA>: > 
    )


#TARGET_SOURCES( ${CMAKE_PROJECT_NAME} PRIVATE
#    src/____write_.cu/.cpp_files_here____
#)

SET_PROPERTY( TARGET ${CMAKE_PROJECT_NAME} PROPERTY CUDA_SEPARABLE_COMPILATION ON )
SET_PROPERTY( TARGET ${CMAKE_PROJECT_NAME} PROPERTY CUDA_ARCHITECTURES 61 62 70 72 75 )
